--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,11 +1,19 @@
+<mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input
+    matInput
+    (keyup)="applyFilter($event)"
+    placeholder="Search with SkuId , Name or Stocks"
+    #input
+  />
+</mat-form-field>
+
 <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- skuId Column -->
+  <table mat-table [dataSource]="dataSource" matSort>
+    <!-- Sku_ID Column -->
     <ng-container matColumnDef="skuId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>skuId</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.skuId }}
-      </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>SKU ID</th>
+      <td mat-cell *matCellDef="let row">{{ row.skuId }}</td>
     </ng-container>
 
     <!-- Name Column -->
@@ -36,9 +44,9 @@
       </td>
     </ng-container>
 
-    <!-- Edit Column-->
+    <!-- Color Column -->
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef>Edit</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Color</th>
       <td mat-cell *matCellDef="let row">
         <button mat-button (click)="edit(row)" class="edit_button">
           <mat-icon>edit</mat-icon>
@@ -58,14 +66,17 @@
       *matRowDef="let row; columns: displayedColumns"
       class="{{ row.skuId }}"
     ></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">
+        No data matching the filter "{{ input.value }}"
+      </td>
+    </tr>
   </table>
 
-  <mat-paginator
-    #paginator
-    [length]="dataSource?.bookData.length"
-    [pageIndex]="0"
-    [pageSize]="2"
-    [pageSizeOptions]="[1, 2, 3, 4]"
-  >
-  </mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
+<div class="startingSpinner" *ngIf="showStartingSpinner">
+  <img src="../../assets/images/Bean Eater-1s-50px.gif" alt="loading" />
 </div>
