--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<app-nav *ngIf="selectedRoute !== '/login'">
+<app-nav>
   <router-outlet></router-outlet>
 </app-nav>
-
-<router-outlet *ngIf="selectedRoute === '/login'"></router-outlet>
