--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -17,6 +17,7 @@
   color: white;
   text-decoration: none;
   opacity: 0.7;
+  font-size: medium;
   &.active-link {
     opacity: 1;
   }
@@ -38,4 +39,14 @@ mat-sidenav-content {
 }
 .logout_link {
   cursor: pointer;
+}
+.brand {
+  display: flex;
+  flex-direction: column;
+}
+
+.main_svg {
+  margin-top: 0.5px;
+  margin-left: 10px;
+  margin-right: 20px;
 }
