--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -44,19 +44,67 @@
       </td>
     </ng-container>
 
-    <!-- Color Column -->
-    <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Color</th>
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
       <td mat-cell *matCellDef="let row">
-        <button mat-button (click)="edit(row)" class="edit_button">
+        <input
+          type="text"
+          matInput
+          name="price"
+          value="{{ row.price }}"
+          disabled
+        />
+      </td>
+    </ng-container>
+
+    <!-- Publisher Column -->
+    <ng-container matColumnDef="publisher">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Publisher</th>
+      <td mat-cell *matCellDef="let row">
+        <input
+          type="text"
+          matInput
+          name="publisher"
+          value="{{ row.publisher }}"
+          disabled
+        />
+      </td>
+    </ng-container>
+
+    <!-- Edit Column -->
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef>Edit</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="edit(row)" class="edit_button">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-button (click)="save(row)" class="check_button hidden">
+        <button mat-icon-button (click)="save(row)" class="check_button hidden">
           <mat-icon>check</mat-icon>
         </button>
         <div class="mat-spinner hidden">
           <img src="../../assets/images/Bean Eater-1s-50px.gif" alt="loading" />
         </div>
+      </td>
+    </ng-container>
+
+    <!-- Print Column -->
+    <ng-container matColumnDef="print">
+      <th mat-header-cell *matHeaderCellDef>Print Barcode</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="show(row)">
+          <mat-icon>qr_code</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Delete Column -->
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef>Delete Item</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="delete(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
 
@@ -79,4 +127,29 @@
 </div>
 <div class="startingSpinner" *ngIf="showStartingSpinner">
   <img src="../../assets/images/Bean Eater-1s-50px.gif" alt="loading" />
+</div>
+<div id="qrCode" [ngClass]="{ qrShown: qrShown }" #qrCode1>
+  <mat-toolbar color="primary">
+    {{ skuIdOfQr }}
+    <div class="spacer"></div>
+    <button mat-icon-button (click)="closeQrCode()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-toolbar>
+  <div
+    style="display: flex; justify-content: center; align-items: center"
+    id="printingQRCode"
+  >
+    <ngx-qrcode
+      [elementType]="elementType"
+      [value]="value"
+      errorCorrectionLevel="L"
+    >
+    </ngx-qrcode>
+  </div>
+  <div style="display: flex; justify-content: center; align-items: center">
+    <button mat-raised-button color="accent" (click)="print()">
+      <mat-icon>print</mat-icon> Print Barcode
+    </button>
+  </div>
 </div>
